added openai api support

--- a/scripts/experiments.ipynb
+++ b/scripts/experiments.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,45 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j_/dc9smlnj1sndvt5x192t9s080000gn/T/ipykernel_54508/1371627304.py:17: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "/var/folders/j_/dc9smlnj1sndvt5x192t9s080000gn/T/ipykernel_54508/1700921726.py:17: UserWarning: PySoundFile failed. Trying audioread instead.\n",
       "  audio_data, sr = librosa.load(audio_file)\n",
       "/opt/homebrew/lib/python3.11/site-packages/librosa/core/audio.py:184: FutureWarning: librosa.core.audio.__audioread_load\n",
       "\tDeprecated as of librosa version 0.10.0.\n",
       "\tIt will be removed in librosa version 1.0.\n",
       "  y, sr_native = __audioread_load(path, offset, duration, dtype)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "70.37037037037037 41 700236\n",
-      "(70.37037037037037, {'surah_name': 'Al-Fatihah', 'ayat_number': 3}, {'surah_name': 'Al-Fatihah', 'ayat_number': 4})\n",
-      "1\n",
-      "86.95652173913044 98 700236\n",
-      "(86.95652173913044, {'surah_name': 'Al-Fatihah', 'ayat_number': 4}, {'surah_name': 'Al-Fatihah', 'ayat_number': 5})\n",
-      "2\n",
-      "92.3076923076923 121 700236\n",
-      "(92.3076923076923, {'surah_name': 'Al-Fatihah', 'ayat_number': 5}, {'surah_name': 'Al-Fatihah', 'ayat_number': 6})\n",
-      "3\n",
-      "73.52941176470588 160 700236\n",
-      "(73.52941176470588, {'surah_name': 'Al-Fatihah', 'ayat_number': 6}, {'surah_name': 'Al-Fatihah', 'ayat_number': 7})\n",
-      "4\n",
-      "81.08108108108108 195 700236\n",
-      "(81.08108108108108, {'surah_name': 'Al-Fatihah', 'ayat_number': 7}, {'surah_name': 'Al-Baqarah', 'ayat_number': 1})\n",
-      "5\n",
-      "63.888888888888886 234 700236\n",
-      "(63.888888888888886, {'surah_name': 'Al-Baqarah', 'ayat_number': 1}, {'surah_name': 'Al-Baqarah', 'ayat_number': 1})\n",
-      "73.04347826086956 47 700236\n",
-      "(73.04347826086956, {'surah_name': 'Al-Fatihah', 'ayat_number': 3}, {'surah_name': 'Al-Baqarah', 'ayat_number': 1})\n"
      ]
     }
    ],
@@ -295,7 +269,7 @@
     "    return decoded_ids, tarteel_string\n",
     "\n",
     "\n",
-    "audio_file = \"../Fatihah2.m4a\"\n",
+    "audio_file = \"../data/Al-Layl_1.mp3\"\n",
     "\n",
     "audio_data, sr = librosa.load(audio_file)\n",
     "audio_data = librosa.resample(audio_data, orig_sr = sr, target_sr=16000)\n",
@@ -305,15 +279,12 @@
     "\n",
     "\n",
     "\n",
-    "for i, chunk in enumerate(chunks):\n",
-    "    _, tarteel_string = get_transcription(audio_data[chunk[0]: chunk[1]])\n",
-    "    print(i)\n",
-    "    print(get_close_matches_indexes(tarteel_string, ayat_arr, ayat_info))\n",
+    "# for i, chunk in enumerate(chunks):\n",
+    "#     _, tarteel_string = get_transcription(audio_data[chunk[0]: chunk[1]])\n",
+    "#     print(i)\n",
     "\n",
     "\n",
     "_ , tarteel = get_transcription(audio_data)\n",
-    "\n",
-    "print(get_close_matches_indexes(tarteel, ayat_arr, ayat_info))\n",
     "\n",
     "\n",
     "\n",
@@ -325,30 +296,99 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rapidfuzz partial"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  9728,  56320],\n",
-       "       [ 56832,  77824],\n",
-       "       [ 79872, 110080],\n",
-       "       [118272, 155136],\n",
-       "       [155648, 166400],\n",
-       "       [174080, 196608],\n",
-       "       [197120, 208384],\n",
-       "       [215552, 256512],\n",
-       "       [263168, 353792]])"
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6236\n",
+      "6236\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "t1 = sum([len(x) for x in ayat_arr])\n",
+    "t2 = len(\" \".join(ayat_arr)+\" \")\n",
+    "\n",
+    "print(t2 - t1)\n",
+    "print(len(ayat_arr))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audio Length 12.96\n",
+      "Time for audio processing 0.11060786247253418\n",
+      "Time for AI Transcription 5.484795808792114\n",
+      "Time for alignment 0.02712082862854004\n",
+      "وَاللَّيْلِ إِذَا يَغْشَى وَالنَّهَارِ إِذَا تَجَلَّى وَمَا خَلَقَ الذَّكَرَ وَالْأُنْثَى\n",
+      "وَٱلَّيۡلِ إِذَا يَغۡشَىٰ وَٱلنَّهَارِ إِذَا تَجَلَّىٰ وَمَا خَلَقَ ٱلذَّكَرَ وَٱلۡأُنثَى\n",
+      "Time for ayat counting 0.0024378299713134766\n",
+      "[{'surah_name': 'Al-Layl', 'ayat_number': 1}, {'surah_name': 'Al-Layl', 'ayat_number': 3}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "current_time = time.time()\n",
+    "audio_file = \"../data/Al-Layl_1.mp3\"\n",
+    "quran_all = \" \".join(ayat_arr) + \" \"\n",
+    "audio_data, sr = librosa.load(audio_file)\n",
+    "audio_data = librosa.resample(audio_data, orig_sr = sr, target_sr=16000)\n",
+    "print(\"Audio Length\", librosa.get_duration(y=audio_data, sr=16000))\n",
+    "print(\"Time for audio processing\", time.time() - current_time)\n",
+    "current_time = time.time()\n",
+    "\n",
+    "_ , tarteel = get_transcription(audio_data)\n",
+    "\n",
+    "print(\"Time for AI Transcription\", time.time() - current_time)\n",
+    "current_time = time.time()\n",
+    "\n",
+    "results = rapidfuzz.fuzz.partial_ratio_alignment(tarteel, quran_all)\n",
+    "\n",
+    "print(\"Time for alignment\", time.time() - current_time)\n",
+    "current_time = time.time()\n",
+    "\n",
+    "print(tarteel)\n",
+    "print(quran_all[results.dest_start:results.dest_end])\n",
+    "\n",
+    "char_count = -1\n",
+    "idx = 0\n",
+    "idxs = []\n",
+    "while char_count <= results.dest_start:\n",
+    "    char_count += len(ayat_arr[idx]) + 1\n",
+    "    idx += 1\n",
+    "\n",
+    "idxs.append(idx-1)\n",
+    "while char_count <= results.dest_end:\n",
+    "    char_count += len(ayat_arr[idx]) + 1\n",
+    "    idx += 1\n",
+    "\n",
+    "idxs.append(idx-1)\n",
+    "\n",
+    "print(\"Time for ayat counting\", time.time() - current_time)\n",
+    "current_time = time.time()\n",
+    "\n",
+    "print([ayat_info[x] for x in idxs])\n"
+   ]
   },
   {
    "cell_type": "code",
